// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`task-outcome-selector > input tasks > renders a date input 1`] = `
"  
  <div class="govuk-form-group">
  <label class="govuk-label" for="value">
    Date of last inspection
  </label>
  <input class="govuk-input" id="value" name="value" type="date" value="2026-03-27">
</div>

"
`;

exports[`task-outcome-selector > input tasks > renders a disabled field without write access 1`] = `
"  
  <div class="govuk-form-group">
  <label class="govuk-label" for="value">
    Siti/FC reference
  </label>
  <div id="value-hint" class="govuk-hint">
    For example, SF123456
  </div>
  <input class="govuk-input" id="value" name="value" type="text" value="" disabled aria-describedby="value-hint" maxlength="20">
</div>

"
`;

exports[`task-outcome-selector > input tasks > renders a number input as text with a numeric inputmode 1`] = `
"  
  <div class="govuk-form-group">
  <label class="govuk-label" for="value">
    Herd size
  </label>
  <input class="govuk-input" id="value" name="value" type="text" value="1200" inputmode="numeric" min="1" max="5000">
</div>

"
`;

exports[`task-outcome-selector > input tasks > renders a saved value back into the field 1`] = `
"  
  <div class="govuk-form-group">
  <label class="govuk-label" for="value">
    Siti/FC reference
  </label>
  <div id="value-hint" class="govuk-hint">
    For example, SF123456
  </div>
  <input class="govuk-input" id="value" name="value" type="text" value="SF123456" aria-describedby="value-hint" maxlength="20">
</div>

"
`;

exports[`task-outcome-selector > input tasks > renders a text input with hint and maxlength 1`] = `
"  
  <div class="govuk-form-group">
  <label class="govuk-label" for="value">
    Siti/FC reference
  </label>
  <div id="value-hint" class="govuk-hint">
    For example, SF123456
  </div>
  <input class="govuk-input" id="value" name="value" type="text" value="" aria-describedby="value-hint" pattern="[A-Z]{2}[0-9]{6}" maxlength="20">
</div>

"
`;

exports[`task-outcome-selector > input tasks > renders an error message against the field 1`] = `
"  
  <div class="govuk-form-group govuk-form-group--error">
  <label class="govuk-label" for="value">
    Siti/FC reference
  </label>
  <div id="value-hint" class="govuk-hint">
    For example, SF123456
  </div>
  <p id="value-error" class="govuk-error-message">
    <span class="govuk-visually-hidden">Error:</span> Enter a value
  </p>
  <input class="govuk-input govuk-input--error" id="value" name="value" type="text" value="" aria-describedby="value-hint value-error" maxlength="20">
</div>

"
`;

exports[`task-outcome-selector > renders checkbox in checked state 1`] = `
"  <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true" checked>
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>

"
`;

exports[`task-outcome-selector > renders checkbox in unchecked state 1`] = `
"  <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true">
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>

"
`;

exports[`task-outcome-selector > renders checkbox when no value options 1`] = `
"  <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true">
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>

"
`;

exports[`task-outcome-selector > renders checkbox when valueOptions is null 1`] = `
"  <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true">
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>

"
`;

exports[`task-outcome-selector > renders radio buttons with first option selected 1`] = `
"  <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Outcome
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value" name="value" type="radio" value="approved" checked>
      <label class="govuk-label govuk-radios__label" for="value">
        Approve
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value-2" name="value" type="radio" value="rejected">
      <label class="govuk-label govuk-radios__label" for="value-2">
        Reject
      </label>
    </div>
  </div>
</fieldset>
</div>

"
`;

exports[`task-outcome-selector > renders radio buttons with long option names 1`] = `
"  <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Outcome
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value" name="value" type="radio" value="approved-with-conditions" checked>
      <label class="govuk-label govuk-radios__label" for="value">
        Approve with conditions that need to be met before final approval
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value-2" name="value" type="radio" value="rejected-insufficient-info">
      <label class="govuk-label govuk-radios__label" for="value-2">
        Reject due to insufficient information provided in the application
      </label>
    </div>
  </div>
</fieldset>
</div>

"
`;

exports[`task-outcome-selector > renders radio buttons with middle option selected 1`] = `
"  <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Outcome
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value" name="value" type="radio" value="approved">
      <label class="govuk-label govuk-radios__label" for="value">
        Approve
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value-2" name="value" type="radio" value="on-hold" checked>
      <label class="govuk-label govuk-radios__label" for="value-2">
        Put on hold
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value-3" name="value" type="radio" value="rejected">
      <label class="govuk-label govuk-radios__label" for="value-3">
        Reject
      </label>
    </div>
  </div>
</fieldset>
</div>

"
`;

exports[`task-outcome-selector > renders radio buttons with multiple options 1`] = `
"  <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Outcome
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value" name="value" type="radio" value="approved">
      <label class="govuk-label govuk-radios__label" for="value">
        Approve
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value-2" name="value" type="radio" value="rejected" checked>
      <label class="govuk-label govuk-radios__label" for="value-2">
        Reject
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value-3" name="value" type="radio" value="on-hold">
      <label class="govuk-label govuk-radios__label" for="value-3">
        Put on hold
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value-4" name="value" type="radio" value="more-info">
      <label class="govuk-label govuk-radios__label" for="value-4">
        Request more information
      </label>
    </div>
  </div>
</fieldset>
</div>

"
`;

exports[`task-outcome-selector > renders radio buttons with no option selected 1`] = `
"  <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Outcome
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value" name="value" type="radio" value="approved">
      <label class="govuk-label govuk-radios__label" for="value">
        Approve
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value-2" name="value" type="radio" value="rejected">
      <label class="govuk-label govuk-radios__label" for="value-2">
        Reject
      </label>
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value-3" name="value" type="radio" value="on-hold">
      <label class="govuk-label govuk-radios__label" for="value-3">
        Put on hold
      </label>
    </div>
  </div>
</fieldset>
</div>

"
`;

exports[`task-outcome-selector > renders radio buttons with single option 1`] = `
"  <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Outcome
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="value" name="value" type="radio" value="approved" checked>
      <label class="govuk-label govuk-radios__label" for="value">
        Approve
      </label>
    </div>
  </div>
</fieldset>
</div>

"
`;

exports[`task-outcome-selector > renders with empty valueOptions array 1`] = `
"  <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true">
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>

"
`;
